# tradeos-cw-sc

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: basic.yml
examples/demo-app/: README.md  package.json
examples/demo-app/src/app/: globals.css  layout.tsx  page.tsx
examples/demo-app/src/components/: SendTokenSection.tsx  TradeOSQueries.tsx
examples/node-scripts/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/node-scripts/src/: claim.ts  config.ts  queryClaimDigest.ts  queryConfig.ts  queryIsClaimed.ts  setVerifier.ts  transferOwnership.ts  xionConnect.ts
ref/: vault.rs
refs/: translated_vault.rs
refs/solidity-version/: .env.example  .eslintrc  .gitignore  .prettierrc  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
refs/solidity-version/contracts/check-in/: CheckIn.sol  deployedAddress.json
refs/solidity-version/contracts/swap-handler/: SwapHandlerV2.sol  deployedAddress.json
refs/solidity-version/contracts/vault/: Points.sol  Vault.sol  deployedAddress.json
refs/solidity-version/contracts/vault/mock/: MockERC20.sol
refs/solidity-version/scripts/check-in/: call.ts  deploy.ts  verify.ts
refs/solidity-version/scripts/swap-handler/: call.ts  deploy.ts  verify.ts
refs/solidity-version/scripts/vault/: call.ts  deploy.ts  verify.ts
refs/solidity-version/tests/check-in/: CheckIn.test.ts
refs/solidity-version/tests/vault/: Vault.test.ts
scripts/: init_migratable_from_code_id.sh  migrate_contract_to_code_id.sh  migrate_from_existing_store_tx.sh  migrate_to_latest.sh
src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
tests/: mod.rs
tests/multitest/: mod.rs  shared_setup.rs  test_vault.rs
