[package]
name = "tradeos-cw-sc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable this feature when importing the crate as a library to avoid compiling wasm entry points
library = []

[dependencies]
cosmwasm-std     = { version = "2.2.2", features = ["stargate", "cosmwasm_2_2"] }
cosmwasm-schema  = "2.0.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
thiserror = "1.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
hex = "0.4"
base64 = "0.22"
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
cw-multi-test = { git = "https://github.com/CosmWasm/cw-multi-test", tag = "v2.5.1", features = ["cosmwasm_2_2"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"

